# platform_observer

./: .gitignore  CMakeLists.txt  README.md  checker.cpp  checker.hpp  filters.cpp  filters.hpp  main.cpp  platform_rois.json  requirements.txt  roi_picker.cpp  safeQueue.hpp
cgi/: README.md
include/: checker.hpp  filters.hpp  stop_status.hpp
roi_picker/: README.md  platform_rois.json  roi_picker  roi_picker.cpp
src/: checker.cpp  filters.cpp
test/: Makefile  stop_status.hpp  test.cpp  test_monitor
